Basic site layout
Basic layout done in class, done to Ben's layout design. Needs to be changed to work more lik emy design

--- a/index.html
+++ b/index.html
@@ -4,37 +4,60 @@
         <title>Clara's Website</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="assets/css/reset.css" />
         <link rel="stylesheet" href="assets/css/styles.css" />
     </head>
 
     <body>
         <header>
-            <h1>Canberra Modern</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="events.html">Events</a></li>
-                    <li><a href="modern.html">Canberra's Modern</a></li>
-                    <li><a href="resources.html">Resources</a></li>
-                </ul>
-            </nav>
+            <div class="inner">
+                <h1>Canberra Modern</h1>
+                <nav>
+                     <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="events.html">Events</a></li>
+                        <li><a href="modern.html">Canberra's Modern</a></li>
+                        <li><a href="resources.html">Resources</a></li>
+                     </ul>
+                </nav>
+            </div>
         </header>
 
+        <div class="hero">
+            <!--set image in css later-->
+        
+
+        </div>
 
         <main>
-            <div>
-                <h2>Canberra Modern</h2>
-                <p>CM text here</p>
+            <div class="inner">
+                <div>
+                    <h2>Canberra Modern</h2>
+                    <p>CM text here</p>
+                </div>
+
+                <aside>
+                    <!-- images here-->
+                </aside>
+
+                <div class="gallery">
+                    <div><h3>Building 1</h3></div>
+                    <div><h3>Building 2</h3></div>
+                    <div><h3>Building 3</h3></div>
+                    <div><h3>Building 4</h3></div>
+                    <div><h3>Building 5</h3></div>
+                    <div><h3>Building 6</h3></div>
+                    <div><h3>Building 7</h3></div>
+                    <div><h3>Building 8</h3></div>
+
+                </div>
             </div>
-
-            <aside>
-                <!-- images here-->
-            </aside>
-                
-
         </main>
 
         <footer>
-            <p>Footer here</p>
-
+            <div class="inner">
+              <p>Footer here</p>
+            </div>
         </footer>
+
+    </body>
