--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
 
 
-                <div class="gallery">
+                <div class="eventsgallery">
                     <div><h3>Event 1</h3></div>
                     <div><h3>Event 2</h3></div>
                     <div><h3>Event 3</h3></div>
@@ -128,7 +128,14 @@
 
         <footer>
             <div class="inner">
-              <p>Footer here</p>
+                <div class="footercontents">
+                    <div>
+                        <p>Copyright © 2017</p>
+                        <p>Canberra Modern Incorporated</p>     
+                        <p>All Rights Reserved.</p>
+                        <p>canberramodern@gmail.com</p>
+                    </div>
+                </div>
             </div>
         </footer>
 
