--- a/resources.html
+++ b/resources.html
@@ -33,11 +33,11 @@
                     <div class="library">
                         <h3>National Library of Australia</h3>
                     </div>
-                    <div class="universityhouse">
-                        <a href-="universityhouse.html">
-                        <h3>University House</h3>
-                        </a>
-                    </div>
+                    
+                        <div class="universityhouse">
+                            <h3><a href="universityhouse.html">University House</a></h3>
+                        </div>
+                    
                     <!-- I need to figure out how to make this link work -->
                     <div class="churchill">
                         <h3>Churchill House</h3>
