--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                 
 
                 <div class="who">
-                    <div><h3>Image 1</h3></div>
-                    <div><h3>Image 2</h3></div>
-                    <div><h3>Image 3</h3></div>
+                    <div class="photo edwina"></div>
+                    <div class="photo amy"></div>
+                    <div class="photo rachel"></div>
                     <div><p>Edwina Jans is an archaeologist, museums and cultural heritage expert who 
                         works with the ACT Government. Edwina specialises in education, communication 
                         and innovative engagement for heritage places.</p></div>
